--- a/css/responsive.css
+++ b/css/responsive.css
@@ -184,7 +184,7 @@
         margin-top: 15px;
     }
     .header_style_01 {
-        background-color: #ffffff;
+        background-color: black;
         display: block;
         left: 0;
         padding: 20px 40px !important;
