--- a/css/versions.css
+++ b/css/versions.css
@@ -55,7 +55,7 @@ body.app_version .grd1:hover,
 body.app_version .grd1:focus {
     background-position: 100px;
     color: #ffffff;
-    background: #C62828;    
+    background: #f5a587;    
 	box-shadow: 0px 1px 27px -3px rgba(0, 0, 0, 0.2);
 }
 
@@ -92,14 +92,16 @@ body.app_version .cac {
     background-color: #ad1457;
 }
 
-body.app_version .dmtop,
+body.app_version .dmtop{
+    background-color: #eb4164;
+}
 body.app_version .footer,
 body.app_version .affix {
-    background-color: #201b25;
+    background-color: #1c1721;
 }
 
 body.app_version .copyrights {
-    background-color: #1c1721;
+    background-color: black;
 }
 
 body.app_version .footer-distributed form input {
@@ -122,7 +124,7 @@ body.app_version .btn-light i {
 }
 
 body.app_version .effect-1:after {
-    box-shadow: 0 0 0 2px #AD1457;
+    box-shadow: 0 0 0 2px #f5a587;
 }
 
 body.app_version .footer a,
